# azure

./: .gitmodules
platform/cmake/: arm-none-eabi.cmake  cortex_m33.cmake
platform/demo/filex/: demo_filex.c
platform/demo/netx/: demo_netx_udp.c
platform/demo/netxduo/: demo_netx_duo_udp.c
platform/demo/threadx/: sample_threadx.c
platform/thomas_m3/: CMakeLists.txt  config.cmake  sample_threadx.c  tx_initialize_low_level.S  tx_user.h
platform/thomas_m3/demo/levelx/: demo_filex_nor_flash.c
platform/thomas_m3/demo/usbx/: demo_usbx.c
platform/thomas_m33/: CMakeLists.txt  config.cmake  cortexm33_vectors.S  thomas_m33.ld  thomas_m33_ns.ld  tx_user.h  user_mbedtls_config.h
platform/thomas_m33/secure/: CMakeLists.txt  cortexm33_crt0_s.S  cortexm33_vectors_s.S  main.c  nsc.S  thomas_m33_s.ld  write.c
platform/thomas_m33/secure/sau/: sau.c  sau.h
